--- a/microblog.env
+++ b/microblog.env
@@ -1,1 +1,6 @@
-FLASK_APP=microblog.py
+MAIL_SERVER=smtp.163.com
+MAIL_PORT=25
+MAIL_USE_TLS=True
+MAIL_USE_SSL=False
+MAIL_USERNAME='zjr1106142424@163.com'
+MAIL_PASSWORD='0303zhang'
